# nutrilens-ml

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md
bench/v0/: README.md  manifest.json
docs/: COLLECTION.md  INFRASTRUCTURE.md  ROADMAP.md
docs/schemas/: inference_response.json
docs/scorecards/: plate-classifier-0.1.0.md
notebooks/: train_plate_classifier_colab.ipynb
src/nutrilens_ml/: __init__.py  __main__.py  cli.py  config.py
src/nutrilens_ml/data/: food101.py  ingest.py  qa.py  schemas.py  splits.py
src/nutrilens_ml/eval/: drift.py  plate.py  pour.py  registry.py  scorecard.py
src/nutrilens_ml/export/: convert.py
src/nutrilens_ml/followup/: calibration.py  rules.py
src/nutrilens_ml/models/: plate.py  plate_classifier.py  pour.py
src/nutrilens_ml/serve/: app.py  auth.py  inference.py
src/nutrilens_ml/training/: plate.py  plate_classifier.py  pour.py
src/nutrilens_ml/utils/: seed.py
tests/: test_config.py  test_eval_tools.py  test_export_smoke.py  test_followup.py  test_plate_metrics.py  test_pour_metrics.py  test_qa.py  test_seed.py  test_serve.py  test_splits.py
